fix(quizz): #MEN-902 reduce spacing between question and answers in test activity

--- a/scss/moodle/mod_quiz.scss
+++ b/scss/moodle/mod_quiz.scss
@@ -74,6 +74,10 @@
       }
     }
   }
+
+  div.qtext > div.clearfix::after {
+    display: none;
+  }
 }
 
 #mod_quiz_navblock {
